Add Principal model and hook up to auth
